<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Discount Calculator</string>
    <string name="originalPrice">Original Price</string>
    <string name="enterOriginalPrice">Enter original price</string>
    <string name="discounts">Discount Options</string>
    <string name="results">Comparison Results</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="error_message">Please enter original price</string>
    <string name="language">Language</string>
    <string name="discount_1">Discount 1</string>
    <string name="discount_2">Discount 2</string>
    <string name="result_better_1">Result: Discount 1 is better (Save</string>
    <string name="result_better_2">Result: Discount 2 is better (Save</string>
    <string name="result_equal">Result: Both discounts are equal (Save</string>
    <string name="savings">Savings:</string>
    <string-array name="options">
        <item>% off</item>
        <item>$ off</item>
    </string-array>
</resources>